# cookbook

./: README.md
examples/audio-car-cockpit/: .gitignore  Makefile  README.md  functions.json  pyproject.toml  server.py
examples/audio-car-cockpit/src/: checklist.py  connection_manager.py  functions.py  llamacpp_inference.py  settings.py  utils.py
examples/audio-car-cockpit/static/: index.html  script.js  shader-logo.js  style.css
examples/browser-control/: .gitignore  AGENTS.md  Makefile  SKILL.md
examples/browser-control/android/BrowserControlDemo/: COMMANDS.txt  README.md  VERIFY.md  build.gradle.kts  gradle.properties  settings.gradle.kts  verify_project.sh
examples/browser-control/configs/: lfm2_350m_local.yaml  lfm2_350m_local_full.yaml  lfm2_350m_local_lora.yaml
examples/browser-control/docker/: docker-compose.training.yml
examples/browser-control/docker/browsergym/: Dockerfile  server.py  start.sh
examples/browser-control/docker/miniwob/: Dockerfile  docker-compose.yml  server.py
examples/browser-control/docker/scripts/: download_checkpoint.sh  run.sh  (+4 more)
examples/browser-control/docs/: browser-control-android-build.md  browser-control-model-build.md  browser-control-model-local-build.md
examples/browser-control/scripts/: convert_to_gguf_local.py  convert_to_gguf_simple.py
examples/invoice-parser/: Makefile  README.md
examples/leap-slogan-example-ios/: README.md
finetuning/: README.md  grpo_for_verifiable_tasks.ipynb  grpo_trl_lora_qlora.ipynb
finetuning/notebooks/: grpo_for_verifiable_tasks.ipynb  sft_for_vision_language_model.ipynb
(+26 files in other folders)
