[project]
name = "audio_car_cockpit"
version = "1.0.0"
description = "Audio car cockpit demo"
readme = "README.md"
requires-python = ">=3.13, <3.14"  # Note: also set in `.python-version`
authors = [
  {name = "Paul Willot", email = "paul.willot@liquid.ai"},
]

dependencies = [
    "fastapi>=0.128.0",
    "httpx-retries>=0.4.5",
    "httpx>=0.28.1",
    "openai>=2.15.0",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "ty>=0.0.12",
]


[tool.uv]
package = false
required-version = ">=0.9.4"

[tool.ruff]
exclude = [".venv", "_tmp_*"]
# Allow lines to be as long as 120.
line-length = 120
# Fix by default
fix = true

[tool.ty.src]
exclude = [".venv", "_tmp_*"]
